--- a/product-card-only/index.html
+++ b/product-card-only/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div class="card">
-        <img src="" alt="" />
+        <img class="card__img" src="./assets/img/img.png" alt="" />
         <div class="card__data">
           <h1 class="card__title">Nike Air Jordan</h1>
           <span class="card__price">$99</span>
